Add controllers of invoice detail
