# api/swagger/swagger.yaml
@@ -21,7 +21,7 @@ paths:
     x-swagger-router-controller: invoices
     get:
       description: Get invoices
-      operationId: list
+      operationId: getInvoices
       responses:
         "200":
           description: Success
@@ -35,7 +35,7 @@ paths:
             $ref: "#/definitions/ErrorResponse"
     post:
       description: Insert a invoice
-      operationId: post
+      operationId: insertInvoice
       parameters:
         - name: body
           in: body
@@ -53,13 +53,13 @@ paths:
           description: Error
           schema:
             $ref: "#/definitions/ErrorResponse"
-  /invoices/{id}:
+  /invoices/{invoiceId}:
     x-swagger-router-controller: invoices
     get:
       description: Get the invoice
-      operationId: get
+      operationId: getInvoice
       parameters:
-        - name: id
+        - name: invoiceId
           in: path
           description: ID of the invoice
           required: true
@@ -76,9 +76,9 @@ paths:
             $ref: "#/definitions/ErrorResponse"
     put:
       description: Update the invoice
-      operationId: put
+      operationId: updateInvoice
       parameters:
-        - name: id
+        - name: invoiceId
           in: path
           description: ID of the invoice
           required: true
@@ -101,11 +101,135 @@ paths:
             $ref: "#/definitions/ErrorResponse"
     delete:
       description: Delete the invoice
-      operationId: delete
+      operationId: deleteInvoice
       parameters:
-        - name: id
+        - name: invoiceId
           in: path
           description: ID of the invoice
+          required: true
+          type: integer
+      responses:
+        "200":
+          description: Success
+        default:
+          description: Error
+          schema:
+            $ref: "#/definitions/ErrorResponse"
+  /invoices/{invoiceId}/details:
+    x-swagger-router-controller: invoiceDetails
+    get:
+      description: Get invoice details
+      operationId: getInvoiceDetails
+      parameters:
+        - name: invoiceId
+          in: path
+          description: ID of the invoice
+          required: true
+          type: integer
+      responses:
+        "200":
+          description: Success
+          schema:
+            type: array
+            items:
+              $ref: "#/definitions/InvoiceDetailResponse"
+        default:
+          description: Error
+          schema:
+            $ref: "#/definitions/ErrorResponse"
+    post:
+      description: Insert a invoiceDetail
+      operationId: insertInvoiceDetail
+      parameters:
+        - name: invoiceId
+          in: path
+          description: ID of the invoice
+          required: true
+          type: integer
+        - name: body
+          in: body
+          description: Date of the invoice detail
+          required: true
+          schema:
+            $ref: "#/definitions/InvoiceDetailRequest"
+      responses:
+        "200":
+          description: Success
+          schema:
+            # a pointer to a definition
+            $ref: "#/definitions/InvoiceDetailResponse"
+        default:
+          description: Error
+          schema:
+            $ref: "#/definitions/ErrorResponse"
+  /invoices/{invoiceId}/details/{detailId}:
+    x-swagger-router-controller: invoiceDetails
+    get:
+      description: Get the invoice detail
+      operationId: getInvoiceDetail
+      parameters:
+        - name: invoiceId
+          in: path
+          description: ID of the invoice
+          required: true
+          type: integer
+        - name: detailId
+          in: path
+          description: ID of the invoice detail
+          required: true
+          type: integer
+      responses:
+        "200":
+          description: Success
+          schema:
+            # a pointer to a definition
+            $ref: "#/definitions/InvoiceDetailResponse"
+        default:
+          description: Error
+          schema:
+            $ref: "#/definitions/ErrorResponse"
+    put:
+      description: Update the invoice detail
+      operationId: updateInvoiceDetail
+      parameters:
+        - name: invoiceId
+          in: path
+          description: ID of the invoice
+          required: true
+          type: integer
+        - name: detailId
+          in: path
+          description: ID of the invoice detail
+          required: true
+          type: integer
+        - name: body
+          in: body
+          description: Date of the invoice detail
+          required: true
+          schema:
+            $ref: "#/definitions/InvoiceDetailRequest"
+      responses:
+        "200":
+          description: Success
+          schema:
+            # a pointer to a definition
+            $ref: "#/definitions/InvoiceDetailResponse"
+        default:
+          description: Error
+          schema:
+            $ref: "#/definitions/ErrorResponse"
+    delete:
+      description: Delete the invoice detail
+      operationId: deleteInvoiceDetail
+      parameters:
+        - name: invoiceId
+          in: path
+          description: ID of the invoice
+          required: true
+          type: integer
+        - name: detailId
+          in: path
+          description: ID of the invoice detail
           required: true
           type: integer
       responses:
@@ -119,12 +243,6 @@ paths:
     x-swagger-pipe: swagger_raw
 # complex objects have schema definitions
 definitions:
-  HelloWorldResponse:
-    required:
-      - message
-    properties:
-      message:
-        type: string
   InvoiceRequest:
     required:
       - invoiceDate
@@ -148,6 +266,36 @@ definitions:
       taxAmount:
         type: integer
       amountIncludingTax:
+        type: integer
+  InvoiceDetailRequest:
+    required:
+      - name
+      - unitPrice
+      - quantity
+    properties:
+      name:
+        type: string
+      unitPrice:
+        type: integer
+      quantity:
+        type: integer
+  InvoiceDetailResponse:
+    required:
+      - invoiceId
+      - detailId
+      - name
+      - unitPrice
+      - quantity
+    properties:
+      invoiceId:
+        type: integer
+      detailId:
+        type: integer
+      name:
+        type: string
+      unitPrice:
+        type: integer
+      quantity:
         type: integer
   ErrorResponse:
     required:
